# rescript-editor-support

./: .depend  .gitignore  Makefile  Readme.md  blablabla.sh  package.json  rescript-editor-support.opam  test.sh
.circleci/: config.yml
.github/workflows/: ci.yml
editor-extensions/vscode/: package-lock.json
esy.lock/: index.json
src/: Files.ml  NewCompletions.ml  Protocol.ml  RescriptEditorSupport.ml
src/analyze/: AsYouType.re  State.re
src/analyze_fixture_tests/: TestDefinition.re  TestHover.re  TestReferences.re
src/full_tests/: FullTests.re
src/lsp/: Diagnostics.re  Main.re  MessageHandlers.re
src/rescript-editor-support/: BuildSystem.re  FindFiles.re  Hover.re  NewCompletions.re
test/: bsconfig.json
tests/: test.sh
