opam-version: "2.0"
name: "rescript-editor-support"
version: "~dev"
synopsis: "Command line to support editor integration for ReScript"
maintainer: "ReScript"
authors: "ReScript Team"
license: "MIT"
homepage: "https://github.com/rescript-lang/rescript-editor-support"
bug-reports:
  "https://github.com/rescript-lang/rescript-editor-support/issues"
depends: [
  "ocaml" {= "4.06.1"}
]
dev-repo: "git+https://github.com/rescript-lang/rescript-editor-support.git"

